developing group purchase function
