# controllers/grouppurchase.js
@@ -2,6 +2,9 @@ const Sequelize = require('sequelize');
 const User = require('../models/user');
 const GroupOrganize = require('../models/group_purchase_organize');
 const GroupTeam = require('../models/group_purchase_team');
+const Notice = require('../models/notice');
+const moment = require('moment');
+
 const { Op } = Sequelize;
 
 exports.gpList = async(req,res,next) => {
@@ -13,6 +16,7 @@ exports.gpList = async(req,res,next) => {
                 place: userLocation,
                 status: 0,
             },
+            order: [['id', 'DESC']], // ID를 기준으로 내림차순 정렬
         });
 
         if(!groupOrganize) {
@@ -27,19 +31,10 @@ exports.gpList = async(req,res,next) => {
                     where: { purchase_id: id },
                 });
 
-                const createdTime = new Date(createdAt);
-                createdTime.setHours(createdTime.getHours() + deadline_hour);
-                createdTime.setMinutes(createdTime.getMinutes() + deadline_min);
-          
-                const endTime = createdTime.toLocaleTimeString('ko-KR', { 
-                    year: 'numeric',
-                    month: 'numeric',
-                    day: 'numeric',
-                    hour: 'numeric',
-                    minute: 'numeric',
-                    hour12: false,
-                    timeZone: 'Asia/Seoul',
-                 });
+                // endTime 계산
+                const createdTime = moment(createdAt).add(deadline_hour, 'hours').add(deadline_min, 'minutes');
+
+                const endTime = createdTime.format('YYYY-MM-DD HH:mm:ss');
 
                 return {
                     id,
@@ -72,6 +67,7 @@ exports.searchGpList = async(req,res,next) => {
                 place: userLocation,
                 status: 0,
             },
+            order: [['id', 'DESC']], // ID를 기준으로 내림차순 정렬
         });
 
         if(!groupSOrganize) {
@@ -86,19 +82,10 @@ exports.searchGpList = async(req,res,next) => {
                     where: { purchase_id: id },
                 });
 
-                const createdTime = new Date(createdAt);
-                createdTime.setHours(createdTime.getHours() + deadline_hour);
-                createdTime.setMinutes(createdTime.getMinutes() + deadline_min);
-          
-                const endTime = createdTime.toLocaleTimeString('ko-KR', { 
-                    year: 'numeric',
-                    month: 'numeric',
-                    day: 'numeric',
-                    hour: 'numeric',
-                    minute: 'numeric',
-                    hour12: false,
-                    timeZone: 'Asia/Seoul',
-                 });
+                // endTime 계산
+                const createdTime = moment(createdAt).add(deadline_hour, 'hours').add(deadline_min, 'minutes');
+
+                const endTime = createdTime.format('YYYY-MM-DD HH:mm:ss');
 
                 return {
                     id,
@@ -114,6 +101,157 @@ exports.searchGpList = async(req,res,next) => {
         )
         res.json({userLocation, gpSearchList});
     }catch(error) {
+        next(error);
+    }
+};
+
+exports.participateGp = async(req, res, next) => {
+    try{
+        const fk_user_id_memo = req.user.id;
+        const { gpId } = req.query;
+
+        const participateGroup = await GroupTeam.create({
+            author: 1,
+            isFullGB: 0,
+            purchase_id : gpId,
+            user_id: fk_user_id_memo,
+        });
+
+        //공동구매 글의 참여자 수 조회
+        const participantsCnt = await GroupTeam.count({
+            where: {purchase_id: gpId},
+        });
+
+        //공동구매 글의 모집 인원 수 조회
+        const groupOrganize = await GroupOrganize.findByPk(gpId);
+        const { peoplenum } = groupOrganize;
+
+        //현재 참여자 수랑 비교해서 다 찼으면 DB 상태 업데이트 해주기
+        if (participantsCnt === peoplenum) {
+            await groupOrganize.update({ status : 1});
+            await participateGroup.update({ isFullGB: 1});
+        }
+
+        if(participateGroup.isFullGB){
+            res.json({ message: '공동구매에 성공적으로 참여하였습니다.'});
+            next();
+        } else {
+            res.json({ message: '공동구매에 성공적으로 참여하였습니다.'});
+        }
+    }catch(error){
+        next(error)
+    }
+};
+
+exports.dparticipateGp = async(req,res,next) => {
+    const userId = req.user.id;
+    const { gpId } = req.query;
+
+    await GroupTeam.destroy({
+        where: { purchase_id: gpId, user_id: userId },
+    });
+
+    res.json({ message: '공동구매 참여가 취소되었습니다'});
+};
+
+exports.timeoutGp = async(req, res, next) => {
+    try{
+        const { gpId } = req.query;
+
+        //GroupTeam 테이블에서 해당 gpId에 author가 1인 user_id 가 존재하는지 확인
+        const participantsExists = await GroupTeam.findOne({
+            where: { purchase_id: gpId, author: 1 },
+        });
+
+        const groupOrganize = await GroupOrganize.findByPk(gpId);
+
+        //참여자가 존재한다면, 그냥 성사시키기
+        if (participantsExists) {
+            await groupOrganize.update({ status : 1});
+            return next();
+        }
+
+        const creater = await GroupTeam.findOne({
+            where: { purchase_id: gpId, author: 0 },
+        });
+
+        const userId = creater.user_id;
+
+        await Notice.create({
+            user_id: userId,
+            type: gpId,
+            content: '시간이 마감되었으나, 참여자가 없어 글이 삭제되었습니다.',
+        });
+
+        await GroupTeam.destroy({
+            where: { purchase_id: gpId },
+        });
+
+        await GroupOrganize.destroy({
+            where: { id: gpId },
+        });
+
+        return res.json({ message: '작성자에게 공지 완료하고, 성공적으로 게시글 삭제하였습니다.'});
+
+    }catch(error){
+        next(error)
+    }
+};
+
+exports.gpItem = async (req, res, next) => {
+    try {
+        const { gpId } = req.query;
+        const userId = req.user.id;
+
+        //GroupTeam 테이블에서 해당 groupId와 userId를 조회
+        const researchGp = await GroupTeam.findOne({
+            where: {purchase_id: gpId, user_id: userId},
+        });
+
+        //권한 초기값 설정(없으면 null 리턴)
+        let authorization = null;
+
+        if (researchGp) {
+            authorization = researchGp.getDataValue('author');
+        }
+
+        //GroupOrganize 테이블에서 해당 groupId로 검색
+        const groupOrganization = await GroupOrganize.findOne({ where: { id: gpId } });
+
+        if(!groupOrganization) {
+            return res.status(404).json({ message: '해당 공동구매 글을 찾을 수 없습니다.'});
+        }
+
+        const participantCount = await GroupTeam.count({ where: {purchase_id: gpId} });
+
+        //필요한 정보 추출해서 리턴
+        const { name, kakaoadd, peoplenum, place, content, createdAt, deadline_hour, deadline_min, fk_user_id_organize} = groupOrganization;
+
+        //작성자 정보도 조회하기
+        const user_inform = await User.findOne({where: {id: fk_user_id_organize}})
+        const { nickname, grade } = user_inform;
+
+        // endTime 계산
+        const createdTime = moment(createdAt).add(deadline_hour, 'hours').add(deadline_min, 'minutes');
+
+        const endTime = createdTime.format('YYYY-MM-DD HH:mm:ss');
+
+        res.json({
+            authorization,
+            gpId,
+            name,
+            kakaoadd,
+            peoplenum,
+            participantCount,
+            deadline_hour,
+            deadline_min,
+            place,
+            content,
+            endTime,
+            nickname,
+            grade,
+        });
+    } catch (error) {
         next(error);
     }
 };
@@ -153,106 +291,72 @@ exports.createGp = async(req,res,next) => {
     }
 };
 
-exports.participateGp = async(req, res, next) => {
+exports.updateGp = async(req,res,next) => {
     try{
-        const fk_user_id_memo = req.user.id;
-        const { gpId } = req.body;
-
-        const participateGroup = await GroupTeam.create({
-            author: 1,
-            isFullGB: 0,
-            purchase_id : gpId,
-            user_id: fk_user_id_memo,
-        });
-
-        //공동구매 글의 참여자 수 조회
-        const participantsCnt = await GroupTeam.count({
-            where: {purchase_id: gpId},
-        });
-
-        //공동구매 글의 모집 인원 수 조회
-        const groupOrganize = await GroupOrganize.findByPk(gpId);
-        const { peoplenum } = groupOrganize;
-
-        //현재 참여자 수랑 비교해서 다 찼으면 DB 상태 업데이트 해주기
-        if (participantsCnt === peoplenum) {
-            await groupOrganize.update({ status : 1});
-            await participateGroup.update({ isFullGB: 1});
-        }
-
-        if(participateGroup.isFullGB){
-            res.json({ message: '공동구매에 성공적으로 참여하였습니다.'});
-            next();
-        } else {
-            res.json({ message: '공동구매에 성공적으로 참여하였습니다.'});
-        }
-    }catch(error){
-        next(error)
-    }
-};
-
-exports.gpItem = async (req, res, next) => {
-    try {
         const { gpId } = req.query;
         const userId = req.user.id;
 
-        //GroupTeam 테이블에서 해당 groupId와 userId를 조회
-        const researchGp = await GroupTeam.findOne({
-            where: {purchase_id: gpId, user_id: userId},
-        });
+        //GroupOrganize 테이블에서 해당 gpId로 검색
+        const groupOrganization = await GroupOrganize.findByPk(gpId);
 
-        //권한 초기값 설정(없으면 null 리턴)
-        let authorization = null;
-
-        if (researchGp) {
-            authorization = researchGp.getDataValue('author');
+        if (!groupOrganization) {
+            return res.status(404).json({ message: '해당 공동구매 글을 찾을 수 없습니다. '});
         }
 
-        //GroupOrganize 테이블에서 해당 groupId로 검색
-        const groupOrganization = await GroupOrganize.findOne({ where: { id: gpId } });
+        //update할 데이터들 받기
+        const { name, kakaoadd, peoplenum, deadline_hour, deadline_min, place, content } = req.body;
+
+        //update
+        await groupOrganization.update({
+            name,
+            kakaoadd,
+            peoplenum,
+            place,
+            content,
+            deadline_hour,
+            deadline_min,
+          });
+
+          res.json({ message: '공동구매 정보가 성공적으로 업데이트 되었습니다.'});
+
+    }catch(error) {
+        console.log(error);
+        next(error);
+    }
+};
+
+exports.deleteGp = async(req,res,next) => {
+    try{
+        const { gpId } = req.query;
+
+        //GroupOrganize 테이블에서 해당 gpId로 검색
+        const groupOrganization = await GroupOrganize.findByPk(gpId);
 
         if(!groupOrganization) {
             return res.status(404).json({ message: '해당 공동구매 글을 찾을 수 없습니다.'});
         }
 
-        const participantCount = await GroupTeam.count({ where: {purchase_id: gpId} });
-
-        //필요한 정보 추출해서 리턴
-        const { name, kakaoadd, peoplenum, location, content, createdAt, deadline_hour, deadline_min, fk_user_id_organize} = groupOrganization;
-
-        //작성자 정보도 조회하기
-        const user_inform = await User.findOne({where: {id: fk_user_id_organize}})
-        const { nickname, grade } = user_inform;
-
-        //endTime 계산
-        const createdTime = new Date(createdAt);
-              createdTime.setHours(createdTime.getHours() + deadline_hour);
-              createdTime.setMinutes(createdTime.getMinutes() + deadline_min);
-          
-              const endTime = createdTime.toLocaleTimeString('ko-KR', { 
-                    year: 'numeric',
-                    month: 'numeric',
-                    day: 'numeric',
-                    hour: 'numeric',
-                    minute: 'numeric',
-                    hour12: false,
-                    timeZone: 'Asia/Seoul',
-                });
-
-        res.json({
-            authorization,
-            gpId,
-            name,
-            kakaoadd,
-            peoplenum,
-            participantCount,
-            location,
-            content,
-            endTime,
-            nickname,
-            grade,
+        //GroupTeam 테이블에서 해당 gpId에 author가 1인 user_id 가 존재하는지 확인
+        const participantsExists = await GroupTeam.findOne({
+            where: { purchase_id: gpId, author: 1 },
         });
-    } catch (error) {
+
+        if (participantsExists) {
+            return next();
+        }
+
+        await GroupTeam.destroy({
+            where: { purchase_id: gpId },
+        });
+
+        await GroupOrganize.destroy({
+            where: { id: gpId },
+        });
+
+        return res.json({ message: '공동구매 글이 성공적으로 삭제되었습니다.'});
+
+    }catch(error){
+        console.log(error);
         next(error);
     }
 };
